fixing header white space on right side

--- a/style.css
+++ b/style.css
@@ -20,10 +20,10 @@ div#menusticky{
 div#productname{
 	height: var(--header-height);
 	background-color: var(--background-color);
-   position:sticky;
-   position: -webkit-sticky;
-   top:0;
-   right:0;
+	position:sticky;
+	position: -webkit-sticky;
+	top:0;
+	width: 100%;
 	margin-bottom: 50px;
 	z-index: 1;
 }
